fixed action button layout on smaller screen sizes

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -388,3 +388,22 @@ button {
     font-size: 2em;
   }
 }
+
+@media screen and (max-width: 1100px) {
+  .jump-btn {
+    bottom: 125px;
+    right: 60px;
+  }
+  .create-story-btn {
+    bottom: 45px;
+    right: 60px;
+  }
+  .create-story-btn,
+  .jump-btn {
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
